Add tab-completions mid-argument